# 2d-packing-solver

./: .gitignore  CMakeLists.txt  config.json  config.txt  config_30.json  config_benchmark.json  config_benchmark_hell.json  config_tri_30.json  final_config.json  generate  solve
include/: App.hpp  Viewer.hpp  core.hpp  generators.h  graph.hpp  heuristics.h  solvers.h
include/ui/: InputBox.hpp
include/utils/: ColorUtils.hpp  ConfigLoader.hpp  SVGExporter.hpp  Serializer.hpp  Timer.hpp
src/: App.cpp  Viewer.cpp  core.cpp  debug_main.cpp  generators.cpp  heuristics.cpp  main.cpp  solvers.cpp  solvers_common.cpp  solvers_dlx.cpp  solvers_ga.cpp  solvers_ga_perm.cpp  solvers_grasp.cpp  solvers_sa.cpp  viewer_main.cpp
src/ui/: InputBox.cpp
